--- a/senai.ifood.repository/senai.ifood.repository.csproj
+++ b/senai.ifood.repository/senai.ifood.repository.csproj
@@ -4,4 +4,21 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+  </ItemGroup>
+  
+  <!-- ITEM ADICIONADO PARA USAR O MicrosoftEntity -->
+  <ItemGroup>
+      <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0-preview1-final" />
+      <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0-preview1-final" />
+  </ItemGroup>
+
+  <!-- ITEM ADICIONADO PARA CONSEGUIRMOS USAR AS ENTITIES DO PROJETO senai.ifood.domain -->
+  <ItemGroup>
+      <ProjectReference Include="..\senai.ifood.domain\senai.ifood.domain.csproj" />
+  </ItemGroup>
+
 </Project>
